UC13: Performance Comparison (Loops vs Streams)